// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should not use siret2idcc when no entreprise result 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 {
  position: relative;
  overflow: hidden;
}

.c5:before,
.c5:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c5:before {
  left: -2rem;
}

.c5:after {
  right: -2rem;
}

.c6 {
  overflow-x: auto;
}

.c7 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c7 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c7 td,
.c7 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c7 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c7 thead,
.c7 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c7 tfoot {
  vertical-align: top;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c8 {
  width: 100%;
  table-layout: fixed;
}

.c9 {
  font-weight: bold;
  background: #e4e8ef;
}

.c4 {
  margin-top: 2rem;
}

.c14 {
  color: #4d73b8;
  cursor: pointer;
}

.c13 {
  margin: 1rem 0;
}

.c12 {
  margin-top: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

@media screen and (min-width:980px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }
}

@media screen and (min-width:980px) {
  .c11 {
    -webkit-align-self: baseline;
    -ms-flex-item-align: baseline;
    align-self: baseline;
    margin-top: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="xxxx"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <table
            class="c7 c8"
          >
            <tbody>
              <tr
                class="c9"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      IDCC 0275
                    </div>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                      >
                        small title 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should render 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value=""
      />
    </div>
    
  </div>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c4 {
  margin-top: 2rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="9999"
      />
    </div>
    <div
      class="c4"
    >
      <div>
        Aucun résultat pour votre recherche.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c4 {
  margin-top: 2rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="8888"
      />
    </div>
    <div
      class="c4"
    >
      <div>
        <svg
          aria-labelledby="title desc"
          class="__react-svg-spinner_circle"
          height="1em"
          role="img"
          style="animation-duration: 750ms;"
          viewBox="0 0 32 32"
          width="1em"
        >
          <title
            id="title"
          >
            Circle loading spinner
          </title>
          <desc
            id="desc"
          >
            Image of a partial circle indicating "loading."
          </desc>
          <style>
            
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
          </style>
          <circle
            cx="16"
            cy="16"
            fill="none"
            r="12"
            role="presentation"
            stroke="rgba(0,0,0,0.4)"
            stroke-dasharray="43.982297150257104"
            stroke-linecap="round"
            stroke-width="4"
          />
        </svg>
         Recherche des convention collectives...
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 {
  position: relative;
  overflow: hidden;
}

.c5:before,
.c5:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c5:before {
  left: -2rem;
}

.c5:after {
  right: -2rem;
}

.c6 {
  overflow-x: auto;
}

.c7 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c7 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c7 td,
.c7 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c7 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c7 thead,
.c7 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c7 tfoot {
  vertical-align: top;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c8 {
  width: 100%;
  table-layout: fixed;
}

.c9 {
  font-weight: bold;
  background: #e4e8ef;
}

.c4 {
  margin-top: 2rem;
}

.c14 {
  color: #4d73b8;
  cursor: pointer;
}

.c13 {
  margin: 1rem 0;
}

.c12 {
  margin-top: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

@media screen and (min-width:980px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }
}

@media screen and (min-width:980px) {
  .c11 {
    -webkit-align-self: baseline;
    -ms-flex-item-align: baseline;
    align-self: baseline;
    margin-top: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="1234"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <table
            class="c7 c8"
          >
            <tbody>
              <tr
                class="c9"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      IDCC 0275
                    </div>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                        href="/convention-collective/275-small-titre"
                      >
                        small titre
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      IDCC 0276
                    </div>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                        href="/convention-collective/276-smaller-convention-2"
                      >
                        smaller convention 2
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match  1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 {
  position: relative;
  overflow: hidden;
}

.c5:before,
.c5:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c5:before {
  left: -2rem;
}

.c5:after {
  right: -2rem;
}

.c6 {
  overflow-x: auto;
}

.c7 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c7 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c7 td,
.c7 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c7 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c7 thead,
.c7 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c7 tfoot {
  vertical-align: top;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c8 {
  width: 100%;
  table-layout: fixed;
}

.c9 {
  font-weight: bold;
  background: #e4e8ef;
}

.c4 {
  margin-top: 2rem;
}

.c14 {
  color: #4d73b8;
  cursor: pointer;
}

.c13 {
  margin: 1rem 0;
}

.c12 {
  margin-top: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

@media screen and (min-width:980px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }
}

@media screen and (min-width:980px) {
  .c11 {
    -webkit-align-self: baseline;
    -ms-flex-item-align: baseline;
    align-self: baseline;
    margin-top: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="4567"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <table
            class="c7 c8"
          >
            <tbody>
              <tr
                class="c9"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      IDCC 4567
                    </div>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                        href="/convention-collective/4567-smaller-convention-2"
                      >
                        smaller convention 2
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when searching SIRET, should use API SIREN and siret2idcc 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 {
  position: relative;
  overflow: hidden;
}

.c5:before,
.c5:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c5:before {
  left: -2rem;
}

.c5:after {
  right: -2rem;
}

.c6 {
  overflow-x: auto;
}

.c7 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c7 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c7 td,
.c7 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c7 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c7 thead,
.c7 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c7 tfoot {
  vertical-align: top;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c8 {
  width: 100%;
  table-layout: fixed;
}

.c9 {
  font-weight: bold;
  background: #e4e8ef;
}

.c4 {
  margin-top: 2rem;
}

.c14 {
  color: #4d73b8;
  cursor: pointer;
}

.c13 {
  margin: 1rem 0;
}

.c12 {
  margin-top: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

@media screen and (min-width:980px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }
}

@media screen and (min-width:980px) {
  .c11 {
    -webkit-align-self: baseline;
    -ms-flex-item-align: baseline;
    align-self: baseline;
    margin-top: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="01234567891011"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <table
            class="c7 c8"
          >
            <tbody>
              <tr
                class="c9"
              >
                <td>
                  Entreprises
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      Entreprise 1 93100 Commune test
                    </div>
                    <a
                      href="https://entreprise.data.gouv.fr/etablissement/01234567891011"
                      rel="noopener noreferrer"
                      style="font-size: 0.8em;"
                      target="_blank"
                      title="Ouvrir la fiche entreprise"
                    >
                      Fiche entreprise
                    </a>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                      />
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when searching by text, should use ES, api SIREN and siret2idcc 1`] = `
.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 {
  position: relative;
  overflow: hidden;
}

.c5:before,
.c5:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c5:before {
  left: -2rem;
}

.c5:after {
  right: -2rem;
}

.c6 {
  overflow-x: auto;
}

.c7 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c7 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c7 td,
.c7 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c7 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c7 thead,
.c7 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c7 tfoot {
  vertical-align: top;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c8 {
  width: 100%;
  table-layout: fixed;
}

.c9 {
  font-weight: bold;
  background: #e4e8ef;
}

.c4 {
  margin-top: 2rem;
}

.c14 {
  color: #4d73b8;
  cursor: pointer;
}

.c13 {
  margin: 1rem 0;
}

.c12 {
  margin-top: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 1rem;
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
  }
}

@media screen and (min-width:980px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
  }
}

@media screen and (min-width:980px) {
  .c11 {
    -webkit-align-self: baseline;
    -ms-flex-item-align: baseline;
    align-self: baseline;
    margin-top: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <div
      class="c2"
    >
      <input
        class="c3"
        name="q"
        placeholder="Nom d'entreprise, SIRET, nom de convention collective"
        role="search"
        type="search"
        value="hello"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <table
            class="c7 c8"
          >
            <tbody>
              <tr
                class="c9"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      IDCC 0275
                    </div>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                      >
                        titre convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="c9"
              >
                <td>
                  Entreprises
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c10"
                  >
                    <div
                      class="c11"
                    >
                      Entreprise 1 93100 Commune test
                    </div>
                    <a
                      href="https://entreprise.data.gouv.fr/etablissement/44144914700020"
                      rel="noopener noreferrer"
                      style="font-size: 0.8em;"
                      target="_blank"
                      title="Ouvrir la fiche entreprise"
                    >
                      Fiche entreprise
                    </a>
                  </div>
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <a
                        class="c14"
                      >
                        Short Convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
